Update api server routes and openapi schema definition
